logs/Slang/generated/keywords/5.6.2--keyword_typedef.sv.log
name: typedef
description: The 'typedef' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_typedef.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_typedef.sv:8:8: error: expected declarator
    bit typedef;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_typedef.sv:8:16: error: expected identifier
    bit typedef;
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_typedef.sv:8:16: error: expected data type (implicit type name not allowed)
    bit typedef;
               ^
